--- a/src/components/Pages/MainPage/style/HeroStyle.scss
+++ b/src/components/Pages/MainPage/style/HeroStyle.scss
@@ -1,6 +1,8 @@
 .hero {
     width: 100%;
     height: 430px;
+    display: flex;
+    align-items: center;
     background-color: #F4A8A8;
 
     &__header {
