Generator layout added without any funcionality and logic

--- a/src/components/UI/style/ButtonUIStyle.scss
+++ b/src/components/UI/style/ButtonUIStyle.scss
@@ -19,4 +19,12 @@
     background-color: #5da85c;
     color: rgb(227, 233, 236);
   }
+
+  &--generator-input {
+    width: 150px;
+    height: 40px;
+    background-color: rgb(227, 233, 236);
+    color: #191a1b;
+    margin-bottom: 24px;
+  }
 }
