--- a/src/components/Pages/Generator/style/GeneratorStyle.scss
+++ b/src/components/Pages/Generator/style/GeneratorStyle.scss
@@ -1,17 +1,20 @@
 .generator {
-    width: 100%;
-    min-height: 82vh;
+  width: 100%;
+  min-height: 82vh;
+  display: flex;
+
+  &__input {
+    width: 30%;
+    padding: 30px 5%;
+    background-color: #d9d9d9;
+  }
+
+  &__output {
+    width: 70%;
+    padding: 30px 5%;
     display: flex;
-
-    &__input {
-        width: 30%;
-        padding: 30px 5%;
-        background-color: #D9D9D9;
-    }
-
-    &__output {
-        width: 70%;
-        padding: 30px 5%;
-        background-color:  rgb(223, 223, 223);
-    }
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(223, 223, 223);
+  }
 }
