--- a/src/components/Pages/Generator/style/GeneratorOutputStyle.scss
+++ b/src/components/Pages/Generator/style/GeneratorOutputStyle.scss
@@ -7,87 +7,149 @@
     justify-content: center;
     align-items: center;
     &__shape {
-      &--bussines1 {
-        min-width: 763px;
-        min-height: 480px;
-        padding: 25px;
-        border-radius: 12px;
+
+      &--occasional1 {
+        width: 763px;
+        height: 480px;
+        padding: 15px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        background-image: url(../../../../../images/product_background/option1.png);
+        color: white;
+        border-radius: 15px;
 
         .header {
+          display: flex;
+          flex-direction: column;
+
           h1 {
             font-size: 48px;
-            text-align: left;
           }
 
           h2 {
             font-size: 32px;
-            text-align: left;
           }
         }
 
-        .contact {
-            font-size: 16px;
-            font-weight: 900;
+        .content {
           display: flex;
-          justify-content: space-around;
+          justify-content: center;
           align-items: center;
-          margin-top: 70px;
-          padding: 5px;
-          border-top: 1px solid white;
+
+          p {
+            width: 63%;
+            font-size: 24px;
+            color: rgb(49, 49, 128);
+          }
         }
 
-        p {
-          display: inline;
+        .signature {
+          display: flex;
+          flex-direction: column;
+          align-items: end;
+
+          h3 {
+            font-size: 24px;
+            font-family: "Dancing Script", cursive;
+          }
         }
-      }
-      &--bussines2 {
-        min-width: 480px;
-        height: 650px;
-        padding: 25px;
-        border-radius: 12px;
-        display: flex;
-        flex-direction: column-reverse;
-
-        .header {
-            height: 40%;
-            padding-top: 130px;
-
-            h1 {
-                font-size: 48px;
-            }
-
-            h2 {
-                font-size: 32px;
-            }
-        }
-
-        .contact {
-            height: 60%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-
-            p {
-                font-size: 24px;
-                text-align: left;
-                margin-bottom: 50px;
-            }
-        }
-
-      }
-      &--occasional1 {
-        min-width: 763px;
-        min-height: 480px;
-        padding: 25px;
       }
       &--occasional2 {
-        min-width: 550px;
-        min-height: 763px;
+        width: 763px;
+        height: 480px;
         padding: 25px;
+        background-image: url(../../../../../images/product_background/option2.png);
+        color: white;
+        font-family: 'Comfortaa', cursive;
+
+        .header {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+
+          h1 {
+            font-size: 64px;
+            margin-bottom: 5px;
+          }
+
+          h2 {
+            font-size: 24px;
+            margin-left: 5px;
+          }
+        }
+
+        .content {
+          text-align: center;
+          margin-top: 35px;
+
+          p {
+            font-size: 24px;
+          }
+        }
+
+        .signature {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-top: 55px;
+
+          h3 {
+            font-size: 24px;
+            font-family: "Dancing Script", cursive;
+          }
+        }
+      }
+      &--occasional3 {
+        width: 550px;
+        height: 763px;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        background-image: url(../../../../../images/product_background/option3.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: white;
+        font-family: 'Tsukimi Rounded', sans-serif;
+
+        .header {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          margin-bottom: 25px;
+
+          h1 {
+            font-size: 64px;
+            margin-bottom: 5px;
+          }
+
+          h2 {
+            font-size: 24px;
+            margin-left: 5px;
+          }
+        }
+
+        .content {
+          text-align: center;
+
+          p {
+            font-size: 24px;
+          }
+        }
+
+        .signature {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          margin-top: 130px;
+
+          h3 {
+            font-size: 24px;
+            font-family: "Dancing Script", cursive;
+          }
+        }
       }
     }
   }
