Cart and summary initial functionality

--- a/src/components/Pages/Cart/style/ShoppingCartStyle.scss
+++ b/src/components/Pages/Cart/style/ShoppingCartStyle.scss
@@ -21,7 +21,7 @@
     .product {
       width: 150px;
       height: 100px;
-      background-color: gray;
+      background-color: rgba(128, 128, 128, 0.082);
       border-radius: 5px;
     }
   }
