--- a/src/components/Pages/Cart/style/QuantityButtonStyle.scss
+++ b/src/components/Pages/Cart/style/QuantityButtonStyle.scss
@@ -26,7 +26,9 @@
 
     &__count {
         width: 40%;
+        height: 100%;
         text-align: center;
         background-color: rgb(185, 185, 185);
+        border: none;
     }
 }
