--- a/src/components/UI/style/ButtonUIStyle.scss
+++ b/src/components/UI/style/ButtonUIStyle.scss
@@ -36,4 +36,12 @@
     color: white;
     font-size: 20px;
   }
+
+  &--return {
+    background-color: black;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    text-decoration: underline;
+  }
 }
